# nbodysim

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/glad/: glad.h
src/: glad.c  glad.cpp  glad.hpp  input.cpp  input.hpp  main.cpp  plot.py  render.cpp  render.hpp  sim.cpp  sim.hpp  vec.hpp
src/container/: octree.cpp  octree.hpp
